--- a/content/weeks/01-rand-exp.Rmd
+++ b/content/weeks/01-rand-exp.Rmd
@@ -15,6 +15,7 @@ type: docs
 
 ## Topic 1: Introduction to Causality
 
+<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/gyRZSzCtU_o" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 
 ### Materials
