--- a/content/assignments/00-r-intro.Rmd
+++ b/content/assignments/00-r-intro.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Problem Set 0: Getting Started with R and R Studio"
+title: "Problem Set 0: Getting Started with R, R Studio, Git, and Github"
 author: "Gov 51"
 date: 2020-09-02
 ---
@@ -48,7 +48,7 @@ git config --global user.name "John Harvard"
 git config --global user.mail "john@harvard.edu"
 ```
 
-### Creating your first repo (repository)
+### Creating your first repo
 
 Once you are logged into Github and at its homepage, you can now create a new repo (shorthand for "repository"). These repositories are like folders in Dropbox except a bit more structured. Create one by clicking on the green "New" button in the top-left of the screen next to "Repositories." It should look like this:
 
@@ -60,8 +60,39 @@ Now a new screen should pop up requesting some information for the new repo. Giv
 <div class="bordered-image"><img src="/images/github-create-options.png" alt="New Repo Options" width=600></img></div>
 
 
+Once you create your repo, you are ready to connect it to RStudio on your local computer. The easiest way to do this is go to the repo homepage (you're already there if you've just created it) and click on the green "Code" button toward the top right of the page. When you click that, a popup will appear and you can copy the URL (you can click the little clipboard icon to copy this automatically). 
+
+<div class="bordered-image"><img src="/images/github-clone.png" alt="Cloning the repo" width=800></img></div>
+
+Now, switch to RStudio. Go to the menu bar and hit "File > New Project". You can then choose what type of project to start. Since we're importing from Github, we'll use the "Version Control" option (it's the bottom of the list). In the next menu, choose "Git". Now, you can paste the URL in the "Repository URL" box and hit "Create Project". And now you'll have your project ready to go in RStudio. 
+
+## Working with a project in RStudio
+
+You'll see in the bottom right window of RStudio you'll now see the files from your Github project. 
+
+<div class="bordered-image"><img src="/images/rstudio-files.png" alt="Files in RStudio" width=700></img></div>
 
 
+Let's edit the README file by clicking on `README.md` in that file pane and you'll be able to edit it in the top-left pane. Change the header from `# gov-51-problem-set0` to `# Introduction`. If you click on the "Git" tab in the top right panel, you will a list of the changes you've made to the repo since the last commit (you can think of a commit as a more permanent type of saving work to the git repo). 
+
+<div class="bordered-image"><img src="/images/rstudio-git-panel.png" alt="Git panel in RStudio" width=700></img></div>
+
+
+One thing you'll notice here is that git thinks that `gov51-problem-set0.Rproj` is a file that maybe should go into the repo. But this file is just for our local copy of RStudio and shouldn't really go into the repo. To prevent git from bothering us about it every time we open something, we can modify the `.gitignore` file to tell git to ignore certain files. Open `.gitignore` and add a new line with `*.Rproj` on it to tell git to ignore any file with the extension `.Rproj`. 
+
+<div class="bordered-image"><img src="/images/rstudio-edit-gitignore.png" alt="Editing .gitignore" width=800></img></div>
+
+
+If you go back to the Git tab in the top right and refresh (little circular arrow in the top right corner), you see that `gov51-problem-set0.Rproj` is removed from our list. Now we are ready to commit our changes. Click the "Staged" box for `.gitignore` and `README.md` and hit the "Commit" button just above the file list. You'll see a window with the changes that you are about to commit. 
+
+<img src="/images/rstudio-commit.png" alt="Commit dialog box in RStudio" width=800></img>
+
+
+You can click on different files to see what exactly you are changing. Add a short but informative commit message that describes what you are committing and hit "Commit". Once this completes, you can hit the "Push" button in the top right to push that commit back to Github. If you go back to your repo's homepage on Github and refresh the page, you'll see the updates to your README file and the new `.gitignore`.
+
+<div class="bordered-image"><img src="/images/github-changed.png" alt="Github repo after commit" width=800></img></div>
+
+And you're done! You've just created your first repo. 
 
 
 
