--- a/content/weeks/01-rand-exp.Rmd
+++ b/content/weeks/01-rand-exp.Rmd
@@ -24,6 +24,7 @@ type: docs
 
 ## Topic 2: Randomized Experiments
 
+<iframe width="560" height="315" src="https://www.youtube.com/embed/cBYUuD2aVkA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 ### Materials
 
