--- a/content/assignments/tutorials.Rmd
+++ b/content/assignments/tutorials.Rmd
@@ -25,3 +25,19 @@ Once you have completed the tutorial you will see a screen that prompts you to e
 <div class="bordered-image"><img src="/images/tutorial-report.png" alt="RStudio Tutorials Tab" width=800></img></div>
 
 Note that we do not grade these reports on correctness, just that you attempted the entire tutorial. That said, going slowly and making sure that you understand each question and its answer is a good practice to ensure you are mastering the course material. 
+
+
+## FAQs
+
+### What if I receive an error about `pdflatex` and the submission report doesn't download?
+
+To generate the reports, you need something called LaTeX. The details are boring, so you can just install a quick version of this software with the following two lines of R code:
+
+```{r, eval = FALSE}
+install.packages('tinytex')
+tinytex::install_tinytex()  # install TinyTeX
+```
+
+### What if I don't see a Tutorial tab in RStudio?
+
+Make sure that you have RStudio version 1.3 or higher installed on your computer. On a Mac, you can check the version by going to the top left of the menu bar (next to the Apple logo) and clicking on "RStudio" then "About RStudio". On a Windows PC, you can find the same item under File > About. 
